force-app/main/default/objects/Users_role__c/Users_role__c.object-meta.xml
<CustomObject>
    <label>Users role</label>
    <nameField>
        <displayFormat>URID-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users role</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>