force-app/main/default/objects/Users_role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Builder User</fullName>
            </value>
            <value>
                <fullName>Sponsor Influence</fullName>
            </value>
            <value>
                <fullName>Buyer persona decisor</fullName>
            </value>
            <value>
                <fullName>Buyer persona influencer</fullName>
            </value>
            <value>
                <fullName>Project Lead</fullName>
            </value>
            <value>
                <fullName>Operator user</fullName>
            </value>
            <value>
                <fullName>IT representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>