force-app/main/default/objects/Users_role__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stable</fullName>
                <default>true</default>
                <label>Stable Relationship</label>
            </value>
            <value>
                <fullName>Stopper IT</fullName>
            </value>
            <value>
                <fullName>Discontinuous_relationship</fullName>
                <label>Discontinuous relationship</label>
            </value>
            <value>
                <fullName>Discontinued use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>